--- a/AIHumanizer/appsettings.json
+++ b/AIHumanizer/appsettings.json
@@ -1,11 +1,12 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-AIHumanizer-ee25efef-b425-41c7-b11e-8b6f6b696763;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=tcp:aihumanizer.database.windows.net,1433;Initial Catalog=AIHumanizer;Encrypt=True;TrustServerCertificate=True;Connection Timeout=30;Authentication=\"Active Directory Default\";"
   },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+      "Microsoft": "Warning",
+      "Microsoft.Hosting.Lifetime": "Information"
     }
   },
   "AllowedHosts": "*"
