corrected the connection string

--- a/AIHumanizer/appsettings.json
+++ b/AIHumanizer/appsettings.json
@@ -1,6 +1,7 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=tcp:aihumanizer.database.windows.net,1433;Initial Catalog=AIHumanizer;Encrypt=True;TrustServerCertificate=True;Connection Timeout=30;Authentication=\"Active Directory Default\";"
+    "DefaultConnection": "Server=tcp:aihumanizer.database.windows.net,1433; Authentication=Active Directory Interactive; Database=AIHumanizer; User Id=ail.com#EXT#@omacheronoxgmail.onmicrosoft.com;",
+    "AIHumanizerContextConnection": "Server=(localdb)\\mssqllocaldb;Database=AIHumanizer;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "Logging": {
     "LogLevel": {
