--- a/AIHumanizer/appsettings.json
+++ b/AIHumanizer/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=tcp:aihumanizer.database.windows.net,1433; Authentication=Active Directory Interactive; Database=AIHumanizer; User Id=ail.com#EXT#@omacheronoxgmail.onmicrosoft.com;",
+    "DefaultConnection": "Server=tcp:aihumanizer.database.windows.net,1433;Initial Catalog=AIHumanizer;Persist Security Info=False;User ID=CloudSA778ffb7c;Password=Berylsarah1!;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;",
     "AIHumanizerContextConnection": "Server=(localdb)\\mssqllocaldb;Database=AIHumanizer;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "Logging": {
